[project]
name = "getvpnwebsite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
